--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-scrollable-header": "^1.0.5",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0"
